--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -1,4 +1,14 @@
 {
+    "name": "backend",
+    "version": "1.0.0",
+    "main": "server.js",
+    "scripts": {
+        "start": "nodemon server.js",
+        "start:prod": "NODE_ENV=production nodemon server.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "description": "",
     "dependencies": {
         "bcrypt": "^5.0.1",
         "dotenv": "^16.0.0",
@@ -7,19 +17,13 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.3.1",
         "mongoose-unique-validator": "^3.0.0",
-        "morgan": "^1.10.0",
-        "morgan-body": "^2.6.6",
         "multer": "^1.4.4",
         "nodemon": "^2.0.15",
+        "uuid": "^8.3.2"
+    },
+    "devDependencies": {
+        "morgan": "^1.10.0",
+        "morgan-body": "^2.6.6",
         "util": "^0.12.4"
-    },
-    "scripts": {
-        "start": "nodemon server.js"
-    },
-    "name": "backend",
-    "version": "1.0.0",
-    "main": "server.js",
-    "author": "",
-    "license": "ISC",
-    "description": ""
+    }
 }
