--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -3,8 +3,8 @@
     "version": "1.0.0",
     "main": "server.js",
     "scripts": {
-        "start": "nodemon server.js",
-        "start:prod": "NODE_ENV=production nodemon server.js"
+        "start": "cross-env NODE_ENV=development nodemon server.js",
+        "start:prod": "cross-env NODE_ENV=production nodemon server.js"
     },
     "author": "",
     "license": "ISC",
@@ -22,6 +22,7 @@
         "uuid": "^8.3.2"
     },
     "devDependencies": {
+        "cross-env": "^7.0.3",
         "morgan": "^1.10.0",
         "morgan-body": "^2.6.6",
         "util": "^0.12.4"
